@@ -1,3 +1,9 @@
+### Bug fix
+
+- eventInfiltration compute velocity along gravity-axis (instead of patch
+  normal) to avoid lateral infiltration for non-planar patch. Negative values in
+  infiltration.dat still mean inflow (and positive value exfiltration)
+
 ************************
 *** PMF v2310
 *** Minor fixes and compatibility
